# Code2Gather

./: .dockerignore  .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .markdownlint.json  .markdownlintignore  .prettierignore  .prettierrc  .stylelintignore  .stylelintrc.json  CONTRIBUTING.md  Dockerfile  Procfile  README.md  ReadMe.md  commitlint.config.js  compile-proto-messages.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  tsconfig.eslint.json
auth/: .env.example  .eslintrc.js  .gitignore  Dockerfile.dev  app.js  index.js  package.json  service.js  token.js
code-executor/: .dockerignore  .gitignore  .mypy.ini  Dockerfile  Dockerfile.dev  deploy.sh  package.json  pyproject.toml  requirements.txt
code-executor/src/: __init__.py  __main__.py  code_executor.py  constants.py  gateway.py  wsgi.py
code-executor/src/utils/: bimap.py
code-executor/tests/: __init__.py  test_bimap.py  test_executor.py  test_gateway.py
code-executor/tests/judge0stub/: app.py  constants.py
code-executor/tests/utils/: request_mock.py
coding/: .eslintrc.js  Dockerfile  Dockerfile.dev  index.js  package-lock.json  package.json  routes.js  server.js  socketService.js  tsconfig.json
coding/code_executor/: code_executor.py  package.json  pyproject.toml
coding/code_executor/src/: code_executor.py
coding/code_executor/utils/: bimap.py
deployment/: api-ingress.yaml  config_map.yaml  deployment.yaml  frontend_config_map.yaml  hpa.yml  ingress.yaml  localtesting.sh  managed_certs.yaml  service.yaml
frontend/: .dockerignore  .env  .env.example  .eslintrc.js  .stylelintignore  .stylelintrc.json  Dockerfile  Dockerfile.dev  package-lock.json  package.json  tsconfig.json
gateway/: .eslintrc.js  Dockerfile.dev  app.js  index.js  package.json  proxy.js
history/: .env.development  .env.test  .eslintrc.json  .gitignore  Dockerfile  Dockerfile.dev  jest.config.js  package.json  tsconfig.json
pairing/: Dockerfile  Dockerfile.dev  package.json  pyproject.toml  tsconfig.json
pairing/main/: app.py  config.py  exceptions.py  main.py  socket.py  utils.py
pairing/src/: index.ts  server.ts
pairing/src/constants/: difficulty.ts  socket.ts  user.ts
pairing/src/socket/: authMiddleware.ts  handleDisconnect.ts  handleFindPair.ts  handleStopFindingPair.ts  index.ts
pairing/src/structures/: PairingQueue.ts  SidToUid.ts  SidUidMap.ts  UidCallbackMap.ts
pairing/src/utils/: apiUtils.ts
proto-messages/: code2gather.proto
proxy/: Dockerfile  docker-compose.yaml  nginx.conf
room/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  (+3 more)
(+328 files in other folders)
