[tool.poetry]
name = "pairing"
version = "0.0.1"
description = "Pairing service for Code2Gather"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sanic = "^21.9.1"
Sanic-Cors = "^1.0.1"
python-socketio = "^5.4.1"
python-dotenv = "^0.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
